--- a/.editorconfig
+++ b/.editorconfig
@@ -108,7 +108,7 @@ resharper_csharp_align_multiline_parameter = true
 resharper_csharp_align_multiple_declaration = true
 resharper_csharp_empty_block_style = together_same_line
 resharper_csharp_int_align_comments = true
-resharper_csharp_new_line_before_while = true
+resharper_csharp_new_line_before_while = false
 resharper_csharp_other_braces = end_of_line
 resharper_csharp_wrap_after_declaration_lpar = true
 resharper_csharp_wrap_arguments_style = chop_if_long
@@ -118,6 +118,7 @@ resharper_instance_members_qualify_declared_in = this_class, base_class
 resharper_member_can_be_private_global_highlighting = none
 resharper_member_can_be_private_local_highlighting = none
 resharper_new_line_before_finally = false
+resharper_new_line_before_while = false
 resharper_place_accessorholder_attribute_on_same_line = false
 resharper_place_field_attribute_on_same_line = false
 resharper_place_simple_initializer_on_single_line = true
