--- a/.editorconfig
+++ b/.editorconfig
@@ -19,7 +19,7 @@ csharp_new_line_before_catch = false
 csharp_new_line_before_else = false
 csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = false
-csharp_new_line_before_open_brace = anonymous_methods,control_blocks,lambdas
+csharp_new_line_before_open_brace = anonymous_methods,lambdas
 csharp_preferred_modifier_order = public, private, protected, internal, new, abstract, virtual, sealed, override, static, readonly, extern, unsafe, volatile, async:suggestion
 csharp_style_var_elsewhere = true:suggestion
 csharp_style_var_for_built_in_types = true:suggestion
